@@ -17,3 +17,4 @@
 #undef HAVE_TIMEZONE
 #undef HAVE_TM_GMTOFF
 #undef MONO_SIZEOF_SUNPATH
+#undef NEED_LINK_UNLINK
